# eLabel_demo

./: README.md
.github/workflows/: build.yml
eLabel_demo_slave_correctgpio/: CMakeLists.txt  partitions.csv  sdkconfigwi
eLabel_demo_slave_correctgpio/jegComponents/http/: http.c
eLabel_demo_slave_correctgpio/jegComponents/http/include/: http_recieve.h  (+1 more)
eLabel_demo_slave_correctgpio/jegComponents/network/: CMakeLists.txt  network.c
eLabel_demo_slave_correctgpio/jegComponents/ota/: CMakeLists.txt  ota.c
eLabel_demo_slave_correctgpio/main/: CMakeLists.txt  main.c  main.h  mainTask.c
eLabel_demo_slave_correctgpio/main/esp_now/: m_esp_now.c  m_esp_now.h
eLabel_demo_slave_correctgpio/main/global_message/: global_message.c
eLabel_demo_slave_correctgpio/main/ui/: ui.c  ui_helpers.c
jegComponents/http/: CMakeLists.txt
jegComponents/http/include/: http.h
jegComponents/m_mqtt/: CMakeLists.txt  m_mqtt.c
jegComponents/network/: network.c
jegComponents/network/include/: blufi.h  network.h
jegComponents/ota/include/: ota.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h  mainTask.c  mqtt_client_test.c  mqtt_client_test.h
main/encoder/: EC56.c  EC56.h
main/esp_now/: m_esp_now.c  m_esp_now.h
main/global_message/: global_message.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c
main/ui/components/: ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_roller3.c  ui_comp_roller3.h
main/ui/images/: ui_img_1747580854.c  ui_img_1859145046.c
main/ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c
(+16 files in other folders)
