idf_component_register(SRCS main.c 
cJson/cJSON.c
mqtt_client_test.c
ui/screens/ui_Screen1.c
ui/screens/ui_Screen2.c
ui/screens/ui_Screen3.c
ui/screens/ui_Screen4.c
ui/screens/ui_Screen5.c
ui/ui.c
ui/components/ui_comp_hook.c
ui/ui_helpers.c
ui/images/ui_img_1859145046.c
ui/images/ui_img_1747580854.c
ui/images/ui_img_1460800525.c
INCLUDE_DIRS .)
